# mc-wowza

./: .gitignore  README.md  main.py
apps/AgeGender/: AgeGender  AgeGender.cpp
apps/obj_detector/: CMakeLists.txt  main.cpp  object_detector
apps/obj_detector/python_client/: image_sender.py
apps/obj_detector/python_server/: main.py
apps/samples/: CMakeLists.txt  main.cpp
apps/samples/im_predictor_server/: im_predictor_server.py
apps/samples/src/: image_predictor.cpp  image_predictor.hpp
inference-engine/: main.py
inference-engine/handler/: ImagePredictor.py  image_handler.py
inference-engine/ml/: agender_detector.py  opencvdnn.py
inferenceEngine/: main.py
inferenceEngine/tests/: test_Image_Predictor.py
ipcam-capture/: CMakeLists.txt  main.cpp
ipcam-capture/src/: ipcam.cpp  ipcam.hpp  main.cpp
wowza/: ip_camera.py
wowza-controller/: wowza-client.py
